--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -234,7 +234,7 @@
                     <div class="social-links">
                         <a href="https://github.com/yashodeepchaudhari" class="social-link"><i class="fab fa-github"></i></a>
                         <a href="https://linkedin.com/in/yashodeep-chaudhary-833768371" class="social-link"><i class="fab fa-linkedin"></i></a>
-                        <a href="https://instagram.com/yashodeepchaudhari" class="social-link"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.instagram.com/yashodeep_official/" class="social-link"><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
                 <div class="contact-simple">
