--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -201,7 +201,7 @@
                         </div>
                         <div class="project-links">
                             <a href="#" class="project-link"><i class="fas fa-external-link-alt"></i> Live Demo</a>
-                            <a href="#" class="project-link"><i class="fab fa-github"></i> GitHub</a>
+                            <a href="https://github.com/yashodeepchaudhari/FaceRecognition_AttendanceSystem-.git" class="project-link"><i class="fab fa-github"></i> GitHub</a>
                         </div>
                     </div>
                 </div>
