--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                             <span>GUI Design</span>
                         </div>
                         <div class="project-links">
-                            <a href="#" class="project-link"><i class="fas fa-external-link-alt"></i> Live Demo</a>
+                            <a href="https://under-maintenance-6juafsxg4-yashodeepchaudharis-projects.vercel.app/" class="project-link"><i class="fas fa-external-link-alt"></i> Live Demo</a>
                             <a href="https://github.com/yashodeepchaudhari/Home_Power_Usage_-_Billing-System.git" class="project-link"><i class="fab fa-github"></i> GitHub</a>
                         </div>
                     </div>
@@ -180,7 +180,7 @@
                             <span>CRUD Operations</span>
                         </div>
                         <div class="project-links">
-                            <a href="#" class="project-link"><i class="fas fa-external-link-alt"></i> Live Demo</a>
+                            <a href="https://under-maintenance-6juafsxg4-yashodeepchaudharis-projects.vercel.app/" class="project-link"><i class="fas fa-external-link-alt"></i> Live Demo</a>
                             <a href="https://github.com/yashodeepchaudhari/GymManagementSystem.git" class="project-link"><i class="fab fa-github"></i> GitHub</a>
                         </div>
                     </div>
@@ -200,7 +200,7 @@
                             <span>Face Recognition</span>
                         </div>
                         <div class="project-links">
-                            <a href="#" class="project-link"><i class="fas fa-external-link-alt"></i> Live Demo</a>
+                            <a href="https://under-maintenance-6juafsxg4-yashodeepchaudharis-projects.vercel.app/" class="project-link"><i class="fas fa-external-link-alt"></i> Live Demo</a>
                             <a href="https://github.com/yashodeepchaudhari/FaceRecognition_AttendanceSystem-.git" class="project-link"><i class="fab fa-github"></i> GitHub</a>
                         </div>
                     </div>
